--- a/ViDuLayOut1/app/src/main/res/values/themes.xml
+++ b/ViDuLayOut1/app/src/main/res/values/themes.xml
@@ -1,9 +1,9 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.ViDuLayout1" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.ViDuLayOut1" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
-    <style name="Theme.ViDuLayout1" parent="Base.Theme.ViDuLayout1" />
+    <style name="Theme.ViDuLayOut1" parent="Base.Theme.ViDuLayOut1" />
 </resources>
