--- a/TH_Chuyendoitiente/app/src/main/res/layout/activity_main.xml
+++ b/TH_Chuyendoitiente/app/src/main/res/layout/activity_main.xml
@@ -1,100 +1,141 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="#6A91FA"
-    android:gravity="center"
-    android:id="@+id/mainlayout">
+    android:background="#F0F4F8"
+    android:padding="24dp"
+    tools:context=".MainActivity">
 
-    <com.google.android.material.card.MaterialCardView
-        android:layout_width="350dp"
-        android:layout_height="330dp"
-        android:background="#FFF"
+    <TextView
+        android:id="@+id/tvTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Chuyển Đổi Tiền Tệ"
+        android:textSize="28sp"
+        android:textStyle="bold"
+        android:textColor="@color/black"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="20dp"/>
+    <TextView
+        android:id="@+id/tvExchangeRate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="Tỷ giá: 1 USD = 25,450 VND"
+        android:textColor="@color/black"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tvTitle" />
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/tilAmount"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        app:boxCornerRadiusBottomEnd="16dp"
+        app:boxCornerRadiusBottomStart="16dp"
+        app:boxCornerRadiusTopEnd="16dp"
+        app:boxCornerRadiusTopStart="16dp"
+        app:hintTextColor="@color/black"
+        app:boxStrokeColor="@color/black"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tvExchangeRate">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/inputAmount"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Nhập số tiền"
+            android:inputType="numberDecimal"
+            android:textCursorDrawable="@null"
+            android:textColor="@color/black"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <Spinner
+        android:id="@+id/spinnerFrom"
+        android:layout_width="0dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="8dp"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/ivSwap"
+        app:layout_constraintTop_toBottomOf="@id/tilAmount" />
+
+    <ImageView
+        android:id="@+id/ivSwap"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
+        android:padding="8dp"
+        app:layout_constraintTop_toTopOf="@id/spinnerFrom"
+        app:layout_constraintBottom_toBottomOf="@id/spinnerFrom"
+        app:layout_constraintStart_toEndOf="@id/spinnerFrom"
+        app:layout_constraintEnd_toStartOf="@id/spinnerTo" />
+
+    <Spinner
+        android:id="@+id/spinnerTo"
+        android:layout_width="0dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="8dp"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
+        app:layout_constraintStart_toEndOf="@id/ivSwap"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@id/spinnerFrom" />
+
+    <LinearLayout
+        android:id="@+id/llResult"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_margin="40dp"
-        >
-        <LinearLayout
-            android:layout_width="300dp"
-            android:layout_height="60dp"
-            android:layout_marginTop="30dp"
-            android:gravity="center"
-            android:layout_marginStart="30dp">
-            <View
-                android:layout_width="60dp"
-                android:layout_height="match_parent"
-                android:background="@mipmap/icon_usa"
-                android:layout_marginEnd="20dp">
-            </View>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="20dp"
-                android:text="USA"
-                android:textColor="#9BADE9"
-                android:textSize="20dp">
-            </TextView>
-            <EditText
-                android:layout_width="150dp"
-                android:layout_height="match_parent"
-                android:background="@drawable/input"
-                android:textAlignment="textEnd"
-                android:hint="1.000"
-                android:id="@+id/et_unit1"
-                android:paddingRight="10dp"
-                android:textColor="#6F6F73">
+        android:gravity="center"
+        android:padding="20dp"
+        android:layout_marginTop="32dp"
+        app:layout_constraintTop_toBottomOf="@id/spinnerFrom"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
-            </EditText>
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="300dp"
-            android:layout_height="60dp"
-            android:layout_marginTop="110dp"
-            android:gravity="center"
-            android:layout_marginStart="30dp">
-            <View
-                android:layout_width="60dp"
-                android:layout_height="match_parent"
-                android:background="@mipmap/icon_vn"
-                android:layout_marginEnd="20dp">
-            </View>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="20dp"
-                android:text="VND"
-                android:textColor="#9BADE9"
-                android:textSize="20dp">
-            </TextView>
-            <EditText
-                android:layout_width="150dp"
-                android:layout_height="match_parent"
-                android:background="@drawable/input"
-                android:textAlignment="textEnd"
-                android:id="@+id/et_unit2"
-                android:hint="25000"
-                android:paddingRight="10dp"
-                android:textColor="#6F6F73">
-            </EditText>
-        </LinearLayout>
-
-        <Button
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/btn_convert"
-            android:layout_marginStart="80dp"
-            android:layout_marginTop="230dp"
-            android:backgroundTint="#6B91F4"
-            android:text="CONVERT"
-            android:textSize="20dp"
-            android:paddingTop="20dp"
-            android:paddingBottom="20dp"
-            android:paddingLeft="50dp"
-            android:paddingRight="50dp"
-            app:cornerRadius="10dp" />
+            android:text="Kết quả"
+            android:textSize="18sp"
+            android:textColor="@color/black"/>
 
-    </com.google.android.material.card.MaterialCardView>
-</LinearLayout>
-    schemas.android.com
+        <TextView
+            android:id="@+id/outputAmount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="0.00"
+            android:layout_marginTop="8dp"
+            android:textSize="40sp"
+            android:textStyle="bold"
+            android:textColor="@color/black" />
+
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/btnConvert"
+        android:layout_width="0dp"
+        android:layout_height="60dp"
+        android:text="Chuyển đổi"
+        android:textSize="18sp"
+        android:backgroundTint="@color/black"
+        app:cornerRadius="16dp"
+        android:textColor="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
