--- a/TH_ChuyenManHinh/app/src/main/res/layout/activity_main.xml
+++ b/TH_ChuyenManHinh/app/src/main/res/layout/activity_main.xml
@@ -22,13 +22,13 @@
         android:id="@+id/btnMH1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="104dp"
-        android:layout_marginTop="44dp"
-        android:layout_marginEnd="105dp"
+        android:layout_marginStart="184dp"
+        android:layout_marginEnd="25dp"
+        android:layout_marginBottom="67dp"
         android:onClick="ChuyenSangMH2"
-        android:text="Chuyển Qua Màn Hình 2"
+        android:text="NEXT"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
