--- a/TH_ChuyenManHinh/app/src/main/res/layout/activity_main2.xml
+++ b/TH_ChuyenManHinh/app/src/main/res/layout/activity_main2.xml
@@ -25,11 +25,11 @@
         android:id="@+id/btnMH2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="86dp"
-        android:layout_marginTop="43dp"
-        android:layout_marginEnd="123dp"
-        android:text="Chuyển Về Màn Hình 1"
+        android:layout_marginStart="202dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="78dp"
+        android:text="BACK"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
