--- a/thi_giua_ki/app/src/main/res/layout/activity_baithuoc.xml
+++ b/thi_giua_ki/app/src/main/res/layout/activity_baithuoc.xml
@@ -5,78 +5,73 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".BaiThuocActivity">
 
-    <!--
-      ĐÃ SỬA LỖI CHO BẠN:
-      1. Thêm android:id="@+id/header_layout"
-      2. Đổi layout_width="0dp" (thay vì match_parent, để dùng constraint)
-      3. Thêm 3 constraint (top, start, end) để neo nó vào cạnh trên.
-      Nếu không có 3 constraint này, FrameLayout sẽ bay về góc 0,0.
-    -->
-    <FrameLayout
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/header_layout"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="130dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
         <!-- View nền nằm dưới -->
         <View
-            android:layout_width="match_parent"
-            android:layout_height="130dp"
-            android:background="@drawable/bg_card" />
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:background="@drawable/bg_card"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
 
-        <!-- Logo nằm trên -->
+        <!-- Logo (Neo bên trái) -->
         <ImageView
+            android:id="@+id/imgLogo"
             android:layout_width="112dp"
             android:layout_height="60dp"
-            android:layout_gravity="start|center_vertical"
-            android:layout_marginBottom="16dp"
             android:layout_marginStart="16dp"
+            android:layout_marginBottom="30dp"
             android:contentDescription="Logo"
             android:src="@drawable/logo_ntu"
-            android:visibility="visible" />
-
-    </FrameLayout>
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="200dp"
-        android:fillViewport="true"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_margin="16dp"
-            android:layout_marginTop="200dp"
-            android:layout_weight="1"
-            android:background="@drawable/bg_card_rounded"
-            android:backgroundTint="@color/white"
-            android:clipToOutline="true"
-            android:elevation="4dp"
-            android:orientation="vertical"
-            android:padding="24dp"
+            android:visibility="visible"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:layout_editor_absoluteX="16dp">
+            app:layout_constraintBottom_toBottomOf="parent" />
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recyclerView"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:clipToPadding="false"
-                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                tools:listitem="@layout/item_cacbaithuoc" />
-        </LinearLayout>
-    </ScrollView>
+        <!-- Tiêu đề (Neo bên phải, căn giữa với logo) -->
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="Các Bài Thuốc"
+            android:textColor="@color/white"
+            android:fontFamily="@font/montserrat_bold"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:gravity="end"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="24dp"
+            app:layout_constraintStart_toEndOf="@id/imgLogo"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@id/imgLogo"
+            app:layout_constraintBottom_toBottomOf="@id/imgLogo"/>
 
-    <!--
-      ĐÃ THÊM:
-      Một LinearLayout để chứa các nút, được neo BÊN DƯỚI header_layout
-    -->
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewBaiThuoc"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:clipToPadding="false"
+        android:padding="8dp"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_constraintTop_toBottomOf="@id/header_layout"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:listitem="@layout/item_cacbaithuoc" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
-
