--- a/thi_giua_ki/app/src/main/res/layout/activity_danhmucmonan.xml
+++ b/thi_giua_ki/app/src/main/res/layout/activity_danhmucmonan.xml
@@ -5,70 +5,76 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MonAnActivity">
 
 
-    <FrameLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/header_layout"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="130dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
         <!-- View nền nằm dưới -->
         <View
-            android:layout_width="match_parent"
-            android:layout_height="130dp"
-            android:background="@drawable/bg_card" />
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:background="@drawable/bg_card"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
 
-        <!-- Logo nằm trên -->
+        <!-- Logo (Neo bên trái) -->
         <ImageView
+            android:id="@+id/imgLogo"
             android:layout_width="112dp"
             android:layout_height="60dp"
-            android:layout_gravity="start|center_vertical"
-            android:layout_marginBottom="16dp"
             android:layout_marginStart="16dp"
             android:contentDescription="Logo"
             android:src="@drawable/logo_ntu"
-            android:visibility="visible" />
+            android:visibility="visible"
+            android:layout_marginBottom="40dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" />
 
-    </FrameLayout>
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="150dp"
-        android:fillViewport="true"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <LinearLayout
-            android:layout_width="match_parent"
+        <!-- Tiêu đề (Neo bên phải, căn giữa với logo) -->
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_margin="16dp"
-            android:background="@drawable/bg_card_rounded"
-            android:backgroundTint="@color/white"
-            android:clipToOutline="true"
-            android:elevation="4dp"
-            android:orientation="vertical"
-            android:padding="24dp">
+            android:text="Danh Mục Món Ăn"
+            android:textColor="@color/white"
+            android:fontFamily="@font/montserrat_bold"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:gravity="end"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="24dp"
+            app:layout_constraintStart_toEndOf="@id/imgLogo"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@id/imgLogo"
+            app:layout_constraintBottom_toBottomOf="@id/imgLogo"/>
 
-            <ListView
-                android:id="@+id/lvMonHoc"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@android:color/transparent"
-                android:divider="@null"
-                android:dividerHeight="10dp" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-        </LinearLayout>
-    </ScrollView>
 
-    <!--
-      ĐÃ THÊM:
-      Một LinearLayout để chứa các nút, được neo BÊN DƯỚI header_layout
-    -->
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewMonAn"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:padding="8dp"
+        android:clipToPadding="false"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
 
+        app:layout_constraintTop_toBottomOf="@id/header_layout"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+
+        tools:listitem="@layout/item_monan" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
