--- a/Du_An_Android/app/src/main/res/values/colors.xml
+++ b/Du_An_Android/app/src/main/res/values/colors.xml
@@ -2,4 +2,8 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="bg_dark">#2C2E3E</color>
+    <color name="accent_orange">#FF6F61</color>
+    <color name="border_yellow">#FFD54F</color>
+    <color name="text_hint">#B0BEC5</color>
 </resources>
